# qunet-2-0

./: .gitignore  CHANGELOG.md  CITATION.cff  Dockerfile  LICENSE  Makefile  PROJECT_STRUCTURE.md  README.md  api.py  demo.py  evaluate.py  pyproject.toml  requirements.txt  run_train.sh
.github/workflows/: ci.yml
assets/: README.md
configs/: ablations.yaml  datasets_aptos.yaml  datasets_idrid.yaml  datasets_oct.yaml  default.yaml
docs/: README.md  README_NOTE.md  architecture.md  datasets.md  deployment.md  evidence_protocol.md  experiment_plan.md  method.md  paper_outline.md  results.md  usage.md
examples/: README.md
results/: README.md  metrics.json
scripts/: make_synthetic_data.py
src/qunet2/: __init__.py  augmentations.py  cli.py  config.py  data.py  evaluate.py  predict.py  train.py  utils.py
src/qunet2/api/: app.py
src/qunet2/demo/: streamlit_app.py
src/qunet2/evaluation/: __init__.py  evaluator.py  plots.py  report.py
src/qunet2/models/: __init__.py  calibration.py  callbacks.py  encoders.py  explainability.py  export.py  fusion.py  heads.py  inference.py  losses.py  metrics.py  optim.py  qunet2.py  scheduler.py
tests/: test_losses.py  test_metrics.py  test_shapes.py
